[project]
name = "nostmack-hub"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Pechersky", email = "danny.pechersky@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiohttp (>=3.11.11,<4.0.0)", "asyncio-dgram (>=2.2.0,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
