[project]
name = "nostmack-hub"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Pechersky", email = "danny.pechersky@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = ["aiohttp (>=3.11.11,<4.0.0)", "asyncio-dgram (>=2.2.0,<3.0.0)", "pygame (>=2.6.1,<3.0.0)", "imgui-bundle (>=1.6.2,<2.0.0)", "numpy (>=2.2.3,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
looptime = "^0.2"
pytest-cov = "^6.0.0"
python-dotenv = "^1.0.1"

