[project]
name = "nostmack-hub"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Pechersky", email = "danny.pechersky@gmail.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "aiohttp (>=3.11.11,<4.0.0)",
    "asyncio-dgram (>=2.2.0,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "pytest-asyncio>=0.25.3,<0.26",
    "looptime>=0.2,<0.3",
    "pytest-cov>=6.0.0,<7",
    "python-dotenv>=1.0.1,<2",
    "imgui-bundle>=1.6.2,<2",
]
